@@ -472,7 +472,7 @@ const char *RFX_Type_SubType_Desc(const unsigned char dType, const unsigned char
 		{ pTypeBlinds, sTypeBlindsT3, "A-OK AC114" },
 		{ pTypeBlinds, sTypeBlindsT4, "RAEX" },
 		{ pTypeBlinds, sTypeBlindsT5, "Media Mount" },
-		{ pTypeBlinds, sTypeBlindsT6, "DC106, YOOHA, Rohrmotor24 RMF" },
+		{ pTypeBlinds, sTypeBlindsT6, "T6 DC106" },
 		{ pTypeBlinds, sTypeBlindsT7, "Forest" },
 
 		{ pTypeSecurity1, sTypeSecX10, "X10 security" },
