@@ -201,6 +201,7 @@
 						<option value="101">Harrison Curtain</option>
 						<option value="102">RFY</option>
 						<option value="103">Meiantech Security</option>
+						<option value="206">Blinds T6 DC106</option>
 			</select>
 			</td>
 		  </tr>
@@ -291,6 +292,23 @@
 					<td>
 						<select id="combogpio" style="width:220px" class="combobox ui-corner-all"><option value="-1">?</option></select>
 					</td>
+				</tr>
+			</table>
+		</div>
+		<div id="blindsparams">
+			<table class="display" id="blindparams" border="0" cellpadding="0" cellspacing="20">
+				<tr>
+					<td align="right" style="width:110px"><label>ID:</label></td>
+					<td>
+						<select id="combocmd1" style="width:60px" class="combobox ui-corner-all"></select>
+						<select id="combocmd2" style="width:60px" class="combobox ui-corner-all"></select>
+						<select id="combocmd3" style="width:60px" class="combobox ui-corner-all"></select>
+						<select id="combocmd4" style="width:60px" class="combobox ui-corner-all"></select>
+					</td>
+				</tr>
+				<tr id="blindparamsUnitCode">
+					<td align="right"><label>Unit Code:</label></td>
+					<td><select id="combounitcode" style="width:60px" class="combobox ui-corner-all"></select></td>
 				</tr>
 			</table>
 		</div>
